--- a/index.tex
+++ b/index.tex
@@ -244,7 +244,7 @@
 
 \begin{document}
 \maketitle
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[borderline west={3pt}{0pt}{shadecolor}, enhanced, frame hidden, sharp corners, interior hidden, breakable, boxrule=0pt]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[sharp corners, frame hidden, boxrule=0pt, borderline west={3pt}{0pt}{shadecolor}, interior hidden, enhanced, breakable]}{\end{tcolorbox}}\fi
 
 \renewcommand*\contentsname{Table of contents}
 {
@@ -1000,7 +1000,7 @@ scores. This section will review what reliability is in theory, how to
 estimate reliability, and how to correct effect sizes for measurement
 error.
 
-\begin{tcolorbox}[enhanced jigsaw, arc=.35mm, colback=white, left=2mm, colframe=quarto-callout-note-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-note-color!10!white, coltitle=black, breakable, rightrule=.15mm, leftrule=.75mm, title={\faIcon{bolt} Too long didn't read?}, opacityback=0, bottomtitle=1mm, toptitle=1mm, titlerule=0mm, bottomrule=.15mm, toprule=.15mm]
+\begin{tcolorbox}[enhanced jigsaw, opacitybacktitle=0.6, breakable, bottomtitle=1mm, colbacktitle=quarto-callout-note-color!10!white, bottomrule=.15mm, titlerule=0mm, toprule=.15mm, left=2mm, opacityback=0, colframe=quarto-callout-note-color-frame, title={\faIcon{bolt} Too long didn't read?}, leftrule=.75mm, coltitle=black, colback=white, rightrule=.15mm, arc=.35mm, toptitle=1mm]
 
 Correction for correlations (\(r\))
 
